[gd_scene load_steps=3 format=3 uid="uid://jo22rbrudpam"]

[ext_resource type="Script" path="res://shared/components/random-move-chooser/random-move-chooser.gd" id="1_bdwl7"]
[ext_resource type="PackedScene" uid="uid://dq5r0dxebxidl" path="res://shared/components/movement_validator/movement_validator.tscn" id="2_is2gd"]

[node name="random-move-chooser" type="Node2D"]
script = ExtResource("1_bdwl7")

[node name="MovementValidator" parent="." instance=ExtResource("2_is2gd")]

[node name="MovementAnouncer" type="Control" parent="."]
z_index = 1
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="MovementAnouncer"]
custom_minimum_size = Vector2(400, 110)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -159.5
offset_top = -35.5
offset_right = 159.5
offset_bottom = 35.5
grow_horizontal = 2
grow_vertical = 2

[node name="MovementName" type="Label" parent="MovementAnouncer/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -67.0
offset_top = -43.0
offset_right = 67.0
offset_bottom = 43.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 90
text = "UP-LEFT"
